crates/carta/tests/snapshots/golden_writer__man__common__blockquote.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.RS
.PP
quoted
.PP
more lines here
.RE
