crates/carta/tests/snapshots/golden_writer__man__common__bullet-list-tight.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.IP \(bu 2
a
.IP \(bu 2
b
.IP \(bu 2
c
