crates/carta/tests/snapshots/golden_writer__man__common__citation.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
see [\(atknuth1984] for details
