crates/carta/tests/snapshots/golden_writer__man__common__code-block-indented.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.IP
.EX
indented code
second line
.EE
