crates/carta/tests/snapshots/golden_writer__man__common__code-block-numbered.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.IP
.EX
print(1)
print(2)
.EE
