crates/carta/tests/snapshots/golden_writer__man__common__code-block-trailing-newline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.IP
.EX
first line
second line
.EE
