crates/carta/tests/snapshots/golden_writer__man__common__code-span-space-padded.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
\f[CR] x \f[R]
.PP
\f[CR] \f[R]
.PP
\f[CR]\(gax\f[R]
