crates/carta/tests/snapshots/golden_writer__man__common__definition-list-loose.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.TP
Term
Definition one
.RS
.PP
Definition two
.RE
