crates/carta/tests/snapshots/golden_writer__man__common__definition-list-tight.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.TP
Term
Definition one
.RS
Definition two
.RE
