crates/carta/tests/snapshots/golden_writer__man__common__definition-term-colon.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.TP
term: with colon
definition
